--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -1,7 +1,7 @@
 .secondary-notification {
   background-color: var(--td-bg-color-container);
-  border-radius: var(--td-radius-default);
-  padding: var(--td-comp-paddingTB-xl) var(--td-comp-paddingLR-xxl);
+  border-radius: var(--td-radius-medium);
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
 
   .t-tabs__content {
     padding-top: 0;
@@ -13,7 +13,8 @@
 
   .t-list-item {
     cursor: pointer;
-    padding: 13px 24px 13px 0;
+    padding: var(--td-comp-paddingTB-l) 0;
+    transition: .2s linear;
 
     &:hover {
       background-color: var(--td-bg-color-container-hover);
@@ -33,6 +34,10 @@
       }
     }
 
+    :deep(.t-tag) {
+      margin-right: var(--td-comp-margin-l);
+    }
+
     .t-tag.t-size-s {
       margin-right: var(--td-comp-margin-s);
       margin-left: 0;
@@ -40,25 +45,25 @@
   }
 
   .content {
-    font-family: PingFangSC-Medium;
-    font-size: 14px;
+    font: var(--td-font-body-medium);
     color: var(--td-text-color-placeholder);
     text-align: left;
-    line-height: 22px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
 
   .unread {
-    color: var(--td-brand-color);
+    color: var(--td-text-color-primary);
   }
 
   .msg-action {
     display: none;
+    margin-right: var(--td-comp-margin-xxl);
+    transition: .2s linear;
 
     .set-read-icon {
-      margin-right: 24px;
+      margin-right: var(--td-comp-margin-l);
     }
   }
 
