--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -1,50 +1,53 @@
 :deep(.t-card__title) {
-  font-size: 20px;
-  font-weight: 500;
+  font: var(--td-font-title-large);
+  font-weight: 400;
 }
 
 .user-left-greeting {
-  padding: 28px 32px;
-  line-height: 28px;
-  font-size: 20px;
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
+  font: var(--td-font-title-large);
   background: var(--td-bg-color-container);
   color: var(--td-text-color-primary);
   text-align: left;
-  border-radius: var(--td-radius-default);
+  border-radius: var(--td-radius-medium);
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   .regular {
-    margin-right: 15px;
-    font-size: 14px;
+    margin-left: var(--td-comp-margin-xl);
+    font: var(--td-font-body-medium);
   }
 
   .logo {
-    width: 180px;
+    width: 168px;
   }
 }
 
 .user-info-list {
-  margin-top: 16px;
+  margin-top: var(--td-comp-margin-l);
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
 
   .content {
     width: 90%;
   }
 
+  :deep(.t-card__header) {
+    padding: 0;
+  }
+
+  :deep(.t-card__body) {
+    padding: 0;
+  }
+
   .contract {
-    width: 340px;
-    height: 88px;
-    border-radius: var(--td-radius-default);
-    margin: 8px 0;
 
     &-title {
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
-      line-height: 24px;
-      margin: 20px 0 6px;
-      font-size: 14px;
+      margin: var(--td-comp-margin-xxxl) 0 var(--td-comp-margin-l);
+      font: var(--td-font-body-medium);
       color: var(--td-text-color-placeholder);
     }
 
@@ -52,9 +55,8 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
-      line-height: 40px;
-      font-size: 14px;
-      color: var(--td-text-color-secondary);
+      font: var(--td-font-body-medium);
+      color: var(--td-text-color-primary);
     }
   }
 
@@ -64,23 +66,25 @@
 }
 
 .user-intro {
-  padding: 32px 24px;
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
   background: var(--td-brand-color);
-  border-radius: var(--td-radius-default);
+  border-radius: var(--td-radius-medium);
   color: var(--td-text-color-primary);
 
+  :deep(.t-card__body) {
+    padding: 0;
+  }
+
   .name {
-    line-height: 37px;
-    font-size: 20px;
-    margin-top: 36px;
-    color: #fff;
+    font: var(--td-font-title-large);
+    margin-top: var(--td-comp-margin-xxxl);
+    color: var(--td-text-color-anti);
   }
 
   .position {
-    line-height: 24px;
-    font-size: 14px;
-    margin-top: 8px;
-    color: #fff;
+    font: var(--td-font-body-medium);
+    margin-top: var(--td-comp-margin-s);
+    color: var(--td-text-color-anti);
   }
 
   .user-info {
@@ -106,41 +110,82 @@
 }
 
 .product-container {
-  margin-top: 16px;
-  border-radius: var(--td-radius-default);
+  margin-top: var(--td-comp-margin-l);
+  border-radius: var(--td-radius-medium);
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
+
+  :deep(.t-card__header) {
+    padding: 0;
+    margin-bottom: var(--td-comp-margin-m);
+  }
+
+  :deep(.t-card__body) {
+    padding: 0;
+  }
 
   .content {
     width: 100%;
-    margin: 24px 0 12px;
+    margin: var(--td-comp-margin-xxxl) 0 0;
   }
 
   .logo {
-    width: 48px;
+    width: var(--td-comp-size-xxl);
   }
 }
 
 .content-container {
-  margin-top: 16px;
+  margin-top: var(--td-comp-margin-l);
   background: var(--td-bg-color-container);
-  border-radius: var(--td-radius-default);
+  border-radius: var(--td-radius-medium);
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
+
+  :deep(.t-card__header) {
+    padding: 0;
+  }
+  
+  :deep(.t-card__body) {
+    padding: 0;
+  }
+
+  .card-padding-no {
+    margin-top: var(--td-comp-margin-xxxl);
+    :deep(.t-card__body) {
+      margin-top: var(--td-comp-margin-xxl);
+    }
+  }
 }
 
 .user-team {
-  margin-top: 16px;
+  margin-top: var(--td-comp-margin-l);
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
+
+  :deep(.t-card__header) {
+    padding: 0;
+    margin-bottom: var(--td-comp-margin-m);
+  }
+
+  :deep(.t-card__body) {
+    padding: 0;
+  }
 
   .t-list-item {
-    padding: 15px 0;
+    margin-top: var(--td-comp-margin-xxl);
+    padding: 0;
 
-    .t-list-item__meta-avatar {
-      height: 50px;
-      width: 50px;
-      margin: 0 24px 0 0;
+    :deep(.t-list-item__meta-avatar) {
+      height: var(--td-comp-size-xxl);
+      width: var(--td-comp-size-xxl);
+      margin-right: var(--td-comp-margin-xxl);
     }
 
-    .t-list-item__meta-description {
+    :deep(.t-list-item__meta-title) {
+      margin: 0 0 var(--td-comp-margin-xs);
+    }
+
+    :deep(.t-list-item__meta-description) {
       display: inline-block;
-      color: rgb(0 0 0 / 40%);
-      font-size: 14px;
+      color: var(--td-text-color-placeholder);
+      font: var(--td-font-body-medium);
     }
   }
 }
