--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -26,15 +26,13 @@
   top: 22%;
   left: 5%;
   min-height: 500px;
-  line-height: 22px;
 }
 
 .title-container {
   .title {
-    font-size: 36px;
-    line-height: 44px;
+    font: var(--td-font-headline-large);
     color: var(--td-text-color-primary);
-    margin-top: 4px;
+    margin-top: var(--td-comp-margin-xs);
 
     &.margin-no {
       margin-top: 0;
@@ -42,12 +40,12 @@
   }
 
   .sub-title {
-    margin-top: 16px;
+    margin-top: var(--td-comp-margin-xxl);
 
     .tip {
       display: inline-block;
-      margin-right: 8px;
-      font-size: 14px;
+      margin-right: var(--td-comp-margin-s);
+      font: var(--td-font-body-medium);
 
       &:first-child {
         color: var(--td-text-color-secondary);
@@ -63,18 +61,18 @@
 
 .item-container {
   width: 400px;
-  margin-top: 48px;
+  margin-top: var(--td-comp-margin-xxxxl);
 
   &.login-qrcode {
     .tip-container {
-      width: 192px;
-      margin-bottom: 16px;
-      font-size: 14px;
+      margin-bottom: var(--td-comp-margin-l);
+      font: var(--td-font-body-medium);
       display: flex;
-      justify-content: space-between;
+      align-items: flex-start;
 
       .tip {
         color: var(--td-text-color-primary);
+        margin-right: var(--td-comp-margin-s);
       }
 
       .refresh {
@@ -83,8 +81,8 @@
         color: var(--td-brand-color);
 
         .t-icon {
-          font-size: 14px;
-          margin-left: 4px;
+          font-size: var(--td-comp-size-xxxs);
+          margin-left: var(--td-comp-margin-xs);
         }
 
         &:hover {
@@ -109,12 +107,8 @@
     align-items: center;
 
     &.remember-pwd {
-      margin-bottom: 16px;
+      margin-bottom: var(--td-comp-margin-l);
       justify-content: space-between;
-    }
-
-    :deep(.t-checkbox__label) {
-      color: var(--td-text-color-secondary);
     }
 
     span {
@@ -135,28 +129,27 @@
 
       button {
         flex-shrink: 0;
-        width: 102px;
-        height: 40px;
-        margin-left: 11px;
+        margin-left: var(--td-comp-margin-l);
+        width: 128px;
       }
     }
   }
 
   .btn-container {
-    margin-top: 48px;
+    margin-top: var(--td-comp-margin-xxxxl);
   }
 }
 
 .switch-container {
-  margin-top: 24px;
+  margin-top: var(--td-comp-margin-xxl);
 
   .tip {
-    font-size: 14px;
+    font: var(--td-font-body-medium);
     color: var(--td-brand-color);
     cursor: pointer;
     display: inline-flex;
     align-items: center;
-    margin-right: 14px;
+    margin-right: var(--td-comp-margin-l);
 
     &:last-child {
       &::after {
@@ -169,25 +162,25 @@
       display: block;
       width: 1px;
       height: 12px;
-      background: var(--td-gray-color-3);
-      margin-left: 14px;
+      background: var(--td-component-stroke);
+      margin-left: var(--td-comp-margin-l);
     }
   }
 }
 
 .check-container {
-  font-size: 14px;
+  font: var(--td-font-body-medium);
   color: var(--td-text-color-secondary);
 
   .tip {
     float: right;
-    font-size: 14px;
+    font: var(--td-font-body-medium);
     color: var(--td-brand-color);
   }
 }
 
 .copyright {
-  font-size: 14px;
+  font: var(--td-font-body-medium);
   position: absolute;
   left: 5%;
   bottom: 64px;
