--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -167,13 +167,13 @@
     }
 
     &-logo-t-logo {
-      height: 32px;
+      height: var(--td-comp-size-s);
       width: 100%;
     }
 
     &-logo-tdesign-logo {
-      padding: 0 24px;
-      height: 32px;
+      padding: 0 var(--td-comp-paddingLR-xl);
+      height: var(--td-comp-size-s);
       width: 100%;
       color: var(--td-text-color-primary);
     }
@@ -207,7 +207,6 @@
 .logo-container {
   cursor: pointer;
   display: inline-flex;
-  height: 64px;
   margin-left: 24px;
 }
 
