fix: stylelint  error

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -1,4 +1,4 @@
-@import './font-family.less';
+@import url('./font-family.less');
 
 // layout rewrite
 
@@ -27,7 +27,7 @@
   text-decoration: none;
   margin-right: 24px;
   cursor: pointer;
-  transition: color 0.2s cubic-bezier(0.38, 0, 0.24, 1);
+  transition: color .2s cubic-bezier(.38, 0, .24, 1);
 }
 
 .left-operation-container,
@@ -45,7 +45,8 @@
 }
 
 .t-menu--dark .t-menu__operations .t-icon {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 55%);
+
   &:hover {
     cursor: pointer;
   }
@@ -81,6 +82,7 @@
   &-layout {
     height: calc(100vh - var(--td-comp-size-xxxl));
     overflow-y: scroll;
+
     &-tabs-nav {
       max-width: 100%;
       position: fixed;
@@ -127,7 +129,7 @@
     top: 0;
     bottom: 0;
     z-index: 200;
-    transition: all 0.3s;
+    transition: all .3s;
     min-height: 100%;
 
     &-mix {
@@ -153,6 +155,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
+
       &:hover {
         cursor: pointer;
       }
@@ -173,19 +176,19 @@
     &-logo-normal {
       color: var(--td-brand-color);
       font: var(--td-font-body-large);
-      transition: all 0.3s;
+      transition: all .3s;
     }
   }
 
   &-side-nav-placeholder {
     flex: 1 1 232px;
     min-width: 232px;
-    transition: all 0.3s;
+    transition: all .3s;
 
     &-hidden {
       flex: 1 1 72px;
       min-width: 72px;
-      transition: all 0.3s;
+      transition: all .3s;
     }
   }
 }
@@ -204,7 +207,7 @@
 
 .version-container {
   color: var(--td-text-color-primary);
-  opacity: 0.4;
+  opacity: .4;
 }
 
 .t-menu__popup {
