--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -27,7 +27,7 @@
   text-decoration: none;
   margin-right: 24px;
   cursor: pointer;
-  transition: color .2s cubic-bezier(.38, 0, .24, 1);
+  transition: color 0.2s cubic-bezier(0.38, 0, 0.24, 1);
 }
 
 .left-operation-container,
@@ -129,7 +129,7 @@
     top: 0;
     bottom: 0;
     z-index: 200;
-    transition: all .3s;
+    transition: all 0.3s;
     min-height: 100%;
 
     &-mix {
@@ -176,19 +176,19 @@
     &-logo-normal {
       color: var(--td-brand-color);
       font: var(--td-font-body-large);
-      transition: all .3s;
+      transition: all 0.3s;
     }
   }
 
   &-side-nav-placeholder {
     flex: 1 1 232px;
     min-width: 232px;
-    transition: all .3s;
+    transition: all 0.3s;
 
     &-hidden {
       flex: 1 1 72px;
       min-width: 72px;
-      transition: all .3s;
+      transition: all 0.3s;
     }
   }
 }
@@ -207,7 +207,7 @@
 
 .version-container {
   color: var(--td-text-color-primary);
-  opacity: .4;
+  opacity: 0.4;
 }
 
 .t-menu__popup {
