feat(stylelint): 移除没用的规则

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -45,7 +45,7 @@
 }
 
 .t-menu--dark .t-menu__operations .t-icon {
-  color: rgba(255, 255, 255, 55%);
+  color: rgb(255 255 255 / 55%);
 
   &:hover {
     cursor: pointer;
