fix: fix button style effect

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -10,13 +10,9 @@
   margin-left: var(--td-comp-margin-s);
 }
 
+.t-transfer,
+.t-jumper,
 .t-pagination-mini {
-  .t-button + .t-button {
-    margin-left: 0;
-  }
-}
-
-.t-jumper {
   .t-button + .t-button {
     margin-left: 0;
   }
