fix(style): 使用新版格式修复文件

--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -14,7 +14,7 @@
   .t-list-item {
     cursor: pointer;
     padding: var(--td-comp-paddingTB-l) 0;
-    transition: .2s linear;
+    transition: 0.2s linear;
 
     &:hover {
       background-color: var(--td-bg-color-container-hover);
@@ -60,7 +60,7 @@
   .msg-action {
     display: none;
     margin-right: var(--td-comp-margin-xxl);
-    transition: .2s linear;
+    transition: 0.2s linear;
 
     .set-read-icon {
       margin-right: var(--td-comp-margin-l);
