fix(style): eslint自动格式化

--- a/src/pages/detail/advanced/index.less
+++ b/src/pages/detail/advanced/index.less
@@ -9,6 +9,7 @@
     padding: 0;
     margin-bottom: var(--td-comp-margin-m);
   }
+
   :deep(.t-card__body) {
     padding: 0;
   }
@@ -50,8 +51,7 @@
     width: 100%;
     height: 240px;
     display: flex;
-    align-items: center;
-    justify-items: center;
+    place-items: center center;
     border: dashed 1px var(--td-component-border);
     border-radius: var(--td-radius-medium);
 
