feat: 新增侧边栏颜色模式

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -176,6 +176,10 @@
     }
   }
 
+  &-side-nav-dark {
+    color: var(--td-font-white-1) !important;
+  }
+
   &-side-nav-placeholder {
     flex: 1 1 232px;
     min-width: 232px;
