--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -163,7 +163,7 @@
     }
 
     &-logo-tdesign-logo {
-      padding: 0 var(--td-comp-paddingLR-xl);
+      margin-right: var(--td-comp-margin-xxxl);
       height: var(--td-comp-size-s);
       width: 100%;
       color: var(--td-text-color-primary);
@@ -174,6 +174,10 @@
       font: var(--td-font-body-large);
       transition: all 0.3s;
     }
+  }
+
+  &-side-nav-dark {
+    color: var(--td-font-white-1) !important;
   }
 
   &-side-nav-placeholder {
